--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="card mb-3">
             <div class="card-body">
                 <div class="input-group">
-                    <input type="text" id="txtSearch" class="form-control" placeholer="Aramak istediğiniz ülkenin adını yazınız">
+                    <input type="text" id="txtSearch" class="form-control" placeholder="Aramak istediğiniz ülkenin adını yazınız">
                     <button id="btnSearch" type="button" class="btn btn-primary">OK</button>
                 </div>
             </div>
