--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <div class="container py-3">
-        <div class="card mb-3">
+        <div class="card mb-3 bg-warning">
             <div class="card-body">
                 <div class="input-group">
-                    <input type="text" id="txtSearch" class="form-control" placeholder="Aramak istediğiniz ülkenin adını yazınız">
+                    <input type="text" id="txtSearch" class="form-control" placeholder="Aramak istediğiniz ülkeyi yazınız">
                     <button id="btnSearch" type="button" class="btn btn-primary">OK</button>
                 </div>
             </div>
@@ -23,7 +23,7 @@
         <div class="card mb-3" id="cardDetails">
         </div>
         <div class="card mb-3" id="borders">
-            <div class="card-header" id="cardHeader"></div>
+            <div class="card-header text-white" id="cardHeader"></div>
             <div class="card-body">
                 <div class="row" id="neighbours">
 
